<resources>
    <string name="app_name">ShoppingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginRegisterMsg">If you dont have an account please Register</string>
    <string name="confirmP">Confirm Password</string>
    <string name="emptyLogin">Empty email or password!</string>
    <string name="emptyRegister">Empty fields!</string>
    <string name="currentShoppingLists">Current Shopping Lists</string>
    <string name="completedShoppingLists">Completed Shopping Lists</string>
    <string name="listTitle">Shopping Lists</string>
    <string name="sort">Sort</string>
    <string name="logout">Logout</string>
    <string name="noData">No Data</string>
    <string name="items">Items</string>
    <string name="listName">List name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="addNewItem">Add new item</string>
    <string name="saveList">Save list</string>
    <string name="title_activity_list_details">ListDetailsActivity</string>
    <string name="details">Shopping List Name</string>
    <string name="listStatus">List Status</string>
    <string name="AddShoppingList">Add new Shopping List</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="default_notification_channel_id">Tvac_CH_01</string>
    <item name="addFriendNotificationId" type="id">123456</item>
    <string name="friendFist">Friend List</string>
</resources>
